add commands for sql

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,4 +12,7 @@
     <url-pattern>/test</url-pattern>
   </servlet-mapping>
 
+  <listener>
+    <listener-class>app.ApplicationInitializer</listener-class>
+  </listener>
 </web-app>
