--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,25 @@
         <artifactId>json</artifactId>
         <version>20090211</version>
     </dependency>
+
+    <dependency>
+      <groupId>javax.websocket</groupId>
+      <artifactId>javax.websocket-api</artifactId>
+      <version>1.0</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <!--<dependency>-->
+      <!--<groupId>javax.websocket</groupId>-->
+      <!--<artifactId>javax.websocket-api</artifactId>-->
+      <!--<version>1.1</version>-->
+    <!--</dependency>-->
+
+    <!--<dependency>-->
+      <!--<groupId>org.apache.tomcat</groupId>-->
+      <!--<artifactId>tomcat-catalina</artifactId>-->
+      <!--<version>7.0.27</version>-->
+    <!--</dependency>-->
   </dependencies>
 
   <build>
