--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,4 +15,14 @@
   <listener>
     <listener-class>app.ApplicationInitializer</listener-class>
   </listener>
+
+  <!--<servlet>-->
+    <!--<servlet-name>WsChatServlet</servlet-name>-->
+    <!--<servlet-class>app.WSHandler</servlet-class>-->
+  <!--</servlet>-->
+
+  <!--<servlet-mapping>-->
+    <!--<servlet-name>WsChatServlet</servlet-name>-->
+    <!--<url-pattern>/WsChatServlet</url-pattern>-->
+  <!--</servlet-mapping>-->
 </web-app>
